# taipy_dashboard

./: LICENSE  README.md  main.css  main.py  pyproject.toml  requirements.txt
utils/: __init__.py  login.py  oauth.py  utils.py
